# prototypes

.github/workflows/: build.yml  hs.yml
elm/bzlmod/: ARCH.md  BUILD.bazel  HERMETICITY.md  MODULE.bazel  elm.json  index.html  server.js
elm/bzlmod/src/: Main.elm
hs/bzlmod/: BUILD.bazel  MODULE.bazel  NOTES.md  RESEARCH.md  WORKSPACE  error.txt  hermetic.py  non_module_deps.bzl  rules_haskell_bindist.patch
pigweed/cmake/vanilla/rpc/: README.md  install.sh  main.cc  run_console.py
pw/cmake/rpc/: CMakeLists.txt  README.md  build.sh  ping.options  ping.proto  ping_service.h  run_console.py
