module(name = "hs_bzlmod", version = "0.1")

bazel_dep(name = "rules_haskell", version = "1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")

single_version_override(
    module_name = "rules_haskell",
    patches = ["//:rules_haskell_bindist.patch"],
    patch_strip = 1,
)

haskell_toolchains = use_extension(
    "@rules_haskell//extensions:haskell_toolchains.bzl",
    "haskell_toolchains",
)

haskell_toolchains.bindists(version = "9.4.6")

non_module_deps = use_extension(
    "//:non_module_deps.bzl",
    "non_module_deps",
)

use_repo(
    non_module_deps,
    "zlib.dev",
)

stack = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)

use_repo(
    stack,
    "stackage",
    "stackage-exe",
    "stackage-unpinned",
)

stack.package(
    name = "zlib",
    extra_deps = ["@zlib.dev//:zlib"],
)

# LTS snapshot published for ghc-9.4.6 (default version used by rules_haskell)
stack.snapshot(name = "lts-21.5")
