module(name = "hs_bzlmod", version = "0.1")

bazel_dep(name = "rules_haskell", version = "1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")

# Pure Bzlmod override to upstream rules_haskell containing native Debian 11 bindist support
archive_override(
    module_name = "rules_haskell",
    urls = ["https://github.com/tweag/rules_haskell/archive/refs/heads/master.tar.gz"],
    strip_prefix = "rules_haskell-master",
)

haskell_toolchains = use_extension(
    "@rules_haskell//extensions:haskell_toolchains.bzl",
    "haskell_toolchains",
)

# Natively select Debian 11 (zero patches needed)
haskell_toolchains.bindists(
    version = "9.4.6",
    dist = {
        "linux_amd64": "deb11",
    },
)

non_module_deps = use_extension(
    "//:non_module_deps.bzl",
    "non_module_deps",
)

use_repo(
    non_module_deps,
    "gmp",
    "zlib.dev",
)

stack = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)

use_repo(
    stack,
    "stackage",
    "stackage-exe",
    "stackage-unpinned",
)

stack.package(
    name = "zlib",
    extra_deps = [
        "@gmp//:gmp",
        "@zlib.dev//:zlib",
    ],
)

# LTS snapshot published for ghc-9.4.6 (default version used by rules_haskell)
stack.snapshot(name = "lts-21.5")
